# Uvessel

./: .gitignore  LICENSE  README.md  TODO.md  answers.md  config.toml  overview.md  pipeline.md
.github/workflows/: build-check.yml  build-release.yml
builder-rust/: Cargo.toml
builder-rust/src/: main.rs
installer-rust/: build.rs  cargo.toml
installer-rust/src/: config.rs  fetch_uv.rs  fs_ops.rs  installer.rs  logging.rs  main.rs  paths.rs  payload.rs  runner.rs  shim_payload.rs  shortcuts.rs  state.rs  ui_payload.rs  updater_payload.rs
installer-rust/tests/: installer_integration.rs  logging_integration.rs  payload_integration.rs  runner_integration.rs  uv_integration.rs
launcher-rust/: build.rs  cargo.toml
launcher-rust/src/: installer.rs  main.rs  paths.rs  payload.rs  project_sync.rs  runner.rs  shortcuts.rs  state.rs  uv.rs
launcher-rust/tests/: fs_ops_integration.rs  main_integration.rs  paths_integration.rs  shortcuts_integration.rs
scripts/: build-check.ps1  generate-latest-json.ps1  run-installer.ps1
tauri-ui-rust/webview-installer-rust/: package-lock.json  package.json
tauri-ui-rust/webview-installer-rust/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui-rust/webview-updater-rust/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui-rust/webview-updater-rust/src-tauri/capabilities/: default.json
tauri-ui-rust/webview-updater-rust/src-tauri/src/: lib.rs  main.rs
updater-rust/: Cargo.toml  build.rs
updater-rust/src/: main.rs  ui_payload.rs  updater.rs
webview-installer-rust/: package.json
webview-installer-rust/src-tauri/: Cargo.toml
(+12 files in other folders)
