[package]
name = "updater"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "updater"
path = "src/main.rs"

[dependencies]
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
