[package]
name = "webview-updater-rust"
version = "0.1.0"
description = "Updater UI"
authors = ["you"]
edition = "2021"

[lib]
name = "webview_updater_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
